# pantalone

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  SOUL.md  SOUL.md.bak.20260514  amadeus_research.py  pyproject.toml  requirements.txt  router.md  test-prompts.json  workflow.md
advanced/: antifragile.md  knowledge_base.md  self_learning.md
eval/: failure_rules.md  scoring.md  test_cases.md
logs/: review_log.md  task_log.md  update_log.md
references/: 2026-05-12-debug-session.md  a-stock-data-integration.md  ai-scientist-v2-architecture.md  akshare-news-sources.md  architecture-restructuring-checklist.md  architecture-restructuring-plan.md  audit-2026-05-14-results.md  audit-methodology-v2.md  audit-methodology.md  audit-report-20260514.md  audit-script-fix.md  auto-pool-management.md  auto-scan-config.md  auto-scan-mechanism.md  backtest-system.md  buy-rules-system.md  buy-sell-rule-patterns.md  code-examples.md  compliance-audit-2026-05-14.md  context-compression-perplexity.md  continuity-checklist.md  cron-fault-tolerance-pattern.md  cron-prompt-extraction.md  cron-report-patch-failure-pattern.md  cron-report-patch-fix.md  cron-report-patch-trap.md  cron-schedule-optimized.md  daily-prediction-review-system.md  darwin-evaluation-20260528.md  darwin-skill-guide.md  data-gap-handling.md  data-pipeline-audit.md  data-quality-guide.md  data-quality-system.md  data-sources.md  datasette-setup.md  decision-log-structure.md  dexter-improvement-roadmap.md  dexter-research.md  directory-structure.md  (+75 more)
research_templates/: earnings_analysis.md  macro_analysis.md  sector_analysis.md
rules/: auto_scan_config.md  data_rules.md  learning_rules.md  multi_asset_rules.md  pool_dual_dimension.md  pool_philosophy.md  pool_rules.md  research_rules.md  risk_rules.md  tech_rules.md  trading_rules.md  (+1 more)
(+39 files in other folders)
