[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantalone"
version = "3.7.0"
description = "AI-powered A-stock investment research system with OCIFQ framework and ML ensemble"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Pantalone Contributors"},
]
keywords = [
    "stock-analysis",
    "quantitative-finance",
    "machine-learning",
    "a-stock",
    "investment",
    "lightgbm",
    "xgboost",
    "financial-analysis",
    "china-stock-market",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "akshare>=1.10",
    "yfinance>=0.2.28",
    "tushare>=1.4",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
ml = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/pantalone"
Repository = "https://github.com/YOUR_USERNAME/pantalone"
Issues = "https://github.com/YOUR_USERNAME/pantalone/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
